force-app/main/default/objects/c2g__codaTransactionLineItem__c/fields/cer_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>cer_Acquisition__c</fullName>
    <label>Acquisition</label>
    <length>55</length>
    <type>Text</type>
</CustomField>