force-app/main/default/objects/c2g__codaTransactionLineItem__c/fields/cer_Milestone_Id__c.field-meta.xml
<CustomField>
    <fullName>cer_Milestone_Id__c</fullName>
    <label>Milestone Id</label>
    <type>TextArea</type>
</CustomField>