force-app/main/default/objects/c2g__codaTransactionLineItem__c/fields/cer_Milestone_Name__c.field-meta.xml
<CustomField>
    <fullName>cer_Milestone_Name__c</fullName>
    <label>Milestone Name</label>
    <type>TextArea</type>
</CustomField>